rename table shop_taobao_asynctask to shop_asynctask_taobao;
rename table shop_wexin_exam_problem to shop_weixin_exam_problem;
rename table shop_wexin_exam_paper to shop_weixin_exam_paper;
rename table shop_weixin_exam_user_proble to shop_weixin_exam_user_problem;
######## 2014-9-28 ##########
create unique index code on shop_weixin_vipcode(code);
######## 2014-9-16 ##########
create unique index user_openid on shop_wexin_user_paper(user_openid,paper_id);
######## 2014-9-12 ##########
create unique index owner_openid_id on shop_weixin_vipcode(owner_openid_id);
######## 2014-9-6 ##########
alter table shop_weixin_user add column user_group_id int(11);
ALTER TABLE shop_weixin_user ADD CONSTRAINT fk_user_group FOREIGN KEY (user_group_id) REFERENCES shop_weixin_group (id);
######## 2014-8-26 ##########
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_132f42da;
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_3216ff68;
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_2e774e98;
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_6b9b2d4f;
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_4db90882;
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_1e04cc3c;
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_310979e8;

alter table shop_trades_mergetrade drop index shop_trades_mergetrade_36528e23;
alter table shop_trades_mergetrade drop index shop_trades_mergetrade_5341e6d3;
alter table shop_trades_mergetrade drop index idx_mergetrade_receiver_phone;
alter table shop_trades_mergetrade drop index index_mergetrade_charge_time;
alter table shop_trades_mergetrade drop index shop_trades_mergetrade_132f42da;
alter table shop_trades_mergetrade drop index shop_trades_mergetrade_5436e97a;
alter table shop_trades_mergetrade drop index shop_trades_mergetrade_3216ff68;

alter table shop_orders_order drop column hour;