@@ -129,13 +129,10 @@
 	<button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存信息</button>
       </div>
     </div>
-    
   </div>
-  
 
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-body">
-
       <div class="row">
 	<div class="col-xs-12">
 	  <h5 style="color:#3071a9">温馨提示</h5>
