@@ -1,3 +1,8 @@
+######## 2014-9-30 ##########
+alter table shop_weixin_user add column created datetime NOT NULL;
+alter table shop_weixin_user add column modified datetime NOT NULL;
+update shop_weixin_user set created = subscribe_time,modified=subscribe_time;
+######## 2014-9-29 ##########
 rename table shop_taobao_asynctask to shop_asynctask_taobao;
 rename table shop_wexin_exam_problem to shop_weixin_exam_problem;
 rename table shop_wexin_exam_paper to shop_weixin_exam_paper;
